# Hedone

./: .gitignore  CMakeLists.txt  README.md  build.sh  dependencies.sh  requirements.txt
src/: main.cpp
test/: GeneralTest.cpp
test/edge/: CurlTest.cpp  JsonTest.cpp
